--- a/src/app/pages/print-label/print-label.component.html
+++ b/src/app/pages/print-label/print-label.component.html
@@ -89,7 +89,7 @@
           <button class="custom-btn" 
                   (click)="openIQCModal()"
                   title="IQC - Kiểm tra chất lượng"
-                  style="background: #10b981; color: white;">
+                  style="background: #FDD835; color: black; font-weight: 600;">
             <i class="material-icons">check_circle</i>
             IQC
           </button>
