--- a/src/app/pages/work-order-status/work-order-status.component.html
+++ b/src/app/pages/work-order-status/work-order-status.component.html
@@ -408,7 +408,7 @@
                           <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 55px; font-size: 13.33px; font-weight: normal;">Ngày Giao NVL</th>
                           <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 45px; font-size: 13.33px; font-weight: normal;">Line</th>
                           <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 55px; font-size: 13.33px; font-weight: normal;">NVL thiếu</th>
-                          <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 25px; font-size: 13.33px; font-weight: normal;">Người soạn/Import</th>
+                          <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 25px; font-size: 13.33px; font-weight: normal;">Người soạn</th>
                           <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 25px; font-size: 13.33px; font-weight: normal;">Tình trạng</th>
                           <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 45px; font-size: 13.33px; font-weight: normal;">Đủ/Thiếu</th>
                           <th style="padding: 4px; border: 1px solid #ddd; text-align: center; min-width: 55px; font-size: 13.33px; font-weight: normal;">Ngày nhận thông tin</th>
