--- a/src/app/pages/manage/manage.component.scss
+++ b/src/app/pages/manage/manage.component.scss
@@ -215,8 +215,9 @@
           padding: 12px;
           text-align: left;
           font-weight: 600;
-          color: #333;
+          color: #000000;
           border-bottom: 2px solid #ddd;
+          font-size: 15px;
         }
       }
       
@@ -229,7 +230,20 @@
           td {
             padding: 12px;
             border-bottom: 1px solid #e0e0e0;
-            color: #555;
+            color: #000000;
+            font-size: 14px;
+          }
+          
+          &.total-row {
+            background-color: #f5f5f5;
+            font-weight: 600;
+            
+            td {
+              border-top: 2px solid #ddd;
+              border-bottom: 2px solid #ddd;
+              color: #000000;
+              font-size: 15px;
+            }
           }
         }
       }
