--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -37,14 +37,22 @@
     <div class="card-header">
       <h4 class="card-title">
         <i class="material-icons">manage_search</i>
-        Manage Materials
+        MANAGE MATERIALS
       </h4>
+      <button 
+        class="btn btn-download" 
+        (click)="downloadReport()"
+        [disabled]="summaryData.length === 0"
+        title="Tải report Excel">
+        <i class="material-icons">download</i>
+        Tải Report
+      </button>
     </div>
     <div class="card-body">
       <!-- Selection Controls -->
       <div class="selection-controls">
         <div class="form-group">
-          <label for="factory-select">Nhà máy:</label>
+          <label for="factory-select">NHÀ MÁY:</label>
           <select 
             id="factory-select" 
             class="form-control" 
@@ -56,7 +64,7 @@
         </div>
         
         <div class="form-group">
-          <label for="material-input">Mã nguyên liệu:</label>
+          <label for="material-input">MÃ NGUYÊN LIỆU:</label>
           <input 
             id="material-input"
             type="text" 
@@ -64,12 +72,12 @@
             [(ngModel)]="materialCode"
             (input)="onMaterialCodeChange()"
             (keyup.enter)="searchMaterial()"
-            placeholder="Nhập mã nguyên liệu..."
+            placeholder="NHẬP MÃ NGUYÊN LIỆU..."
             style="text-transform: uppercase;">
         </div>
         
         <div class="form-group">
-          <label for="location-input">Vị trí:</label>
+          <label for="location-input">VỊ TRÍ:</label>
           <input 
             id="location-input"
             type="text" 
@@ -77,7 +85,7 @@
             [(ngModel)]="locationSearch"
             (input)="onLocationSearch()"
             (keyup.enter)="searchByLocation()"
-            placeholder="Nhập vị trí..."
+            placeholder="NHẬP VỊ TRÍ..."
             style="text-transform: uppercase;">
         </div>
         
